--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "private": true,
   "devDependencies": {
-    "gulp": "^3.8.8"
+    "browser-sync": "^2.10.0",
+    "gulp": "^3.9.0"
   },
   "dependencies": {
     "laravel-elixir": "^3.0.0",
